<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#242424">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bump_title"
            android:textSize="36sp"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bump_1"
            android:textSize="18sp"
            android:padding="10dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bump_2"
            android:textSize="18sp"
            android:padding="10dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bump_3"
            android:textSize="18sp"
            android:padding="10dp"
            android:gravity="center"/>


        <TextView
            android:id="@+id/tap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tap"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="#333333"
            android:padding="15dp"
            android:layout_marginTop="16dp"
            android:layout_margin="16dp"/>


        <TextView
            android:id="@+id/tap2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tap2"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="#333333"
            android:padding="15dp"
            android:layout_margin="16dp"/>




    </LinearLayout>


</LinearLayout>