<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#242424"
    tools:context=".RaceActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/steps"
            android:textSize="64sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="56sp"
            android:text="@string/zero"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="64sp"
            android:gravity="center"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="56sp"
            android:text="@string/zero_timer"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calories"
            android:textSize="64sp"
            android:gravity="center"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="56sp"
            android:text="@string/zero"
            android:gravity="center"/>

    </LinearLayout>


</RelativeLayout>